# GameDevEngine2

./: .gitignore  CMakeLists.txt  LICENSE  License.txt  README.md  projects.cmake
Libraries/Engine/: BaseGame.cpp  BaseGame.h  CMakeLists.txt  Matrix2x3.cpp  Matrix2x3.h  SVGParser.cpp  SVGParser.h  SoundEffect.cpp  SoundEffect.h  SoundStream.cpp  SoundStream.h  Texture.cpp  Texture.h  Vector2f.cpp  Vector2f.h  pch.h  structs.cpp  structs.h  utils.cpp  utils.h
Libraries/SDL2-2.0.10/: CMakeLists.txt
Libraries/SDL2_image-2.0.5/: CMakeLists.txt
Libraries/SDL2_mixer-2.0.4/: CMakeLists.txt
Libraries/SDL2_ttf-2.0.15/: CMakeLists.txt
Libraries/STB_Image/: CMakeLists.txt
Libraries/Test/: CMakeLists.txt  CoreTest.cpp  CoreTest[1]_include.cmake
Tools/Blender/: dae_export_polygon.py
cmake/dae/: GameTemplate.cpp  GameTemplate.h  addsdl.cmake  buildweb.cmake  cmakeprojecttemplate.txt  dae_utils.cmake  main.cpp
